<resources>
    <string name="app_name">demOpen</string>
    <string name="preparing_card">Preparing Card</string>
    <string name="no_storage_card">No storage Card</string>
    <string name="not_enough_space">Not Enough Space</string>
    <string name="jsonparsing_error_message">Something went wrong with server</string>
    <string name="internet_error_message">Connection error! Please try again</string>
    <string name="exception_api_error_message"> Something went wrong kindly try again</string>


    <string name="chooseImage">Choose Image</string>
    <string name="clickaPic">Capture Image</string>
    <string name="rotate">Rotation</string>
    <string name="saving_image">Saving image.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_giacomo">Welcome to Giacomo</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="please_wait">Please wait...</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="contact_address">Contact Address</string>
    <string name="create_password">Create Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign In</string>
    <string name="already_mermber">Already Mermber?</string>
    <string name="enter_your_email_below_to_receive_your_password_reset_instructions">Enter your email below to receive your \n password reset instructions</string>
    <string name="send">Send</string>
    <string name="Forgot_password">FORGOT PASSWORD</string>
    <string name="enter_code">Enter code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset">Reset</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="category">Category</string>
    <string name="tweets">Tweets</string>
    <string name="no_data_found">No data found....</string>
    <string name="foreign_investment_call">Foreign Investment</string>
    <string name="communication">Communications</string>
    <string name="competition">Competitions</string>
    <string name="open_data">Open Data</string>
    <string name="download_all">Download All</string>
    <string name="download">Download</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="camera_rotate">Rotate</string>
    <string name="hashtag">Hashtag</string>
    <string name="post">Post</string>
    <string name="photo">Photo</string>
    <string name="posthashtag">#PosthashTag</string>
    <string name="write_your_post_here">Write your post here.....</string>
    <string name="new_post">New Post</string>
    <string name="profile">Profile</string>
    <string name="type_your_bio">\&quot;Give your bio\&quot;</string>
    <string name="no_match_found">No match Found.........</string>
    <string name="notification">Notification</string>
    <string name="simple_notification">Simple notification</string>
    <string name="enable_permission">These Permissions required for this app.Go to settings and enable permissions.</string>
    <string name="permissions">Permissions</string>
    <string name="press_back_button">Press back button again to exit</string>
    <string name="minutes_ago">0 minutes ago</string>
    <string name="just_now">Just now</string>
    <string name="loging_please_wait">Loading Please wait...</string>
    <string name="Social_awareness">SocialAwareNess</string>
    <string name="shared_the_open_data_tweet">\u0020 shared the open data tweet :</string>
    <string name="link_could_not_be_generated">Link could not be generated please try again!</string>
    <string name="please_type_a_comment">Please type a comment.</string>
    <string name="shared_the_tweet">\u0020 shared the tweet :</string>
    <string name="please_write_something">Please write something..</string>
    <string name="select_option">Select Option</string>
    <string name="now">now</string>
    <string name="submit_post">SUBMIT POST</string>
    <string name="tweet">Tweet</string>
    <string name="write_a_comment">Write a comment.....</string>
    <string name="close">Close</string>
    <string name="internet_connection">Internet not working, Please check your connection</string>
    <string name="shared_a_detail"> \u0020 Shared a detail :</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="something_went_wrong_click_to_retry">Something Went wrong! \nClick to Retry</string>

</resources>
