<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/pad_20dp"
    tools:context=".Tweet.fragment.PostTweetFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/pad_15dp"
        android:layout_marginRight="@dimen/pad_15dp"
        android:weightSum="10">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >


            <android.support.v7.widget.CardView
                android:layout_width="@dimen/pad_60dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/pad_8dp"
                >

                <ImageView
                    android:id="@+id/iv_user_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_user_icon" />


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/pad_5dp">

                <com.gaicomo.app.views.AppTextView
                    android:id="@+id/tv_name"
                    style="@style/MyEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />


                <com.gaicomo.app.views.AppTextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginTop="@dimen/pad_5dp"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/txt_15sp" />
                />

            </LinearLayout>

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"/>

         <com.gaicomo.app.views.AppTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/MyEditTextStyle"
             android:textSize="@dimen/txt_18sp"
             android:text="@string/post"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <com.gaicomo.app.views.AppEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/pad_100dp"
            android:id="@+id/et_post"
            android:gravity="top|left"
            android:padding="@dimen/pad_8dp"
            android:hint="@string/write_your_post_here"
            android:background="@drawable/curved_border"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"/>

        <com.gaicomo.app.views.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyEditTextStyle"
            android:textSize="@dimen/txt_18sp"
            android:text="@string/hashtag"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/pad_80dp"
            android:id="@+id/ac_hashtag"
            android:padding="@dimen/pad_8dp"
            android:hint="@string/posthashtag"
            android:gravity="top|left"
            android:background="@drawable/curved_border"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"/>

        <com.gaicomo.app.views.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyEditTextStyle"
            android:textSize="@dimen/txt_18sp"
            android:text="@string/photo"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <ImageView
            android:layout_width="@dimen/pad_80dp"
            android:layout_height="@dimen/pad_80dp"
            android:id="@+id/iv_post"
            android:gravity="top|left"
            android:src="@drawable/upload"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit"
            android:layout_gravity="center"
            android:textSize="@dimen/txt_18sp"
            android:layout_marginLeft="@dimen/pad_20dp"
            android:layout_marginRight="@dimen/pad_20dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_drawable"
            android:text="@string/submit_post"/>

    </LinearLayout>


</RelativeLayout>