<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.gaicomo.app.LoginModule.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:weightSum="10">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/splash_logo"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />


        <com.gaicomo.app.views.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/txt_20sp"
            android:text="@string/welcome_to_giacomo"
            android:textStyle="bold"
            android:textColor="@color/welcome_color"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pad_20dp"
            android:layout_marginLeft="@dimen/pad_20dp"
            style="@style/TextAppearance.App.TextInputLayout"

            >

            <com.gaicomo.app.views.AppEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textCapSentences"
                style="@style/MyEditTextStyle"
                android:maxLength="50"
                android:maxLines="1"
                android:textColorHint="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pad_20dp"
            android:layout_marginLeft="@dimen/pad_20dp"
            style="@style/TextAppearance.App.TextInputLayout"
            app:passwordToggleEnabled="true">

            <com.gaicomo.app.views.AppEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/MyEditTextStyle"
                android:maxLength="30"
                android:maxLines="1"
                android:textColorHint="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />
        
        
        <com.gaicomo.app.views.AppButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:layout_marginRight="@dimen/pad_20dp"
            android:layout_marginLeft="@dimen/pad_20dp"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_18sp"
            android:background="@drawable/button_drawable"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.gaicomo.app.views.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgot"
            android:layout_gravity="center"
            android:textSize="@dimen/txt_15sp"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:padding="@dimen/pad_5dp"
            android:textColor="@color/welcome_color"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="@dimen/pad_100dp"
            android:layout_height="@dimen/pad_1dp"
            android:layout_gravity="center"
            android:background="@color/gray"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_sign_up"
            android:padding="@dimen/pad_5dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <com.gaicomo.app.views.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_new_user"
                android:layout_gravity="center"
                android:textSize="@dimen/txt_15sp"
                android:text="@string/new_user"
                android:textStyle="bold"
                android:textColor="@color/welcome_color"/>


            <com.gaicomo.app.views.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_signup"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/pad_8dp"
                android:textSize="@dimen/txt_15sp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textColor="@color/button_color"/>



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
