<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.gaicomo.app.LoginModule.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:weightSum="10">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <com.gaicomo.app.views.AppTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/txt_16sp"
            android:text="@string/enter_your_email_below_to_receive_your_password_reset_instructions"
            android:layout_marginRight="@dimen/pad_20dp"
            android:layout_marginLeft="@dimen/pad_20dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pad_20dp"
            android:layout_marginLeft="@dimen/pad_20dp"
            style="@style/TextAppearance.App.TextInputLayout"

            >

            <com.gaicomo.app.views.AppEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textCapSentences"
                style="@style/MyEditTextStyle"
                android:maxLength="50"
                android:maxLines="1"
                android:textColorHint="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>



        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />


        <com.gaicomo.app.views.AppButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_send"
            android:layout_marginRight="@dimen/pad_20dp"
            android:layout_marginLeft="@dimen/pad_20dp"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_18sp"
            android:background="@drawable/button_drawable"/>



    </LinearLayout>

</RelativeLayout>
